desktop gallery view fixed. full footer visible for tablets

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 html {
   background-color: #000 !important;
+  min-width: 100%;
 }
 
 body {
@@ -19,8 +20,7 @@ p {
 
 footer {
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  bottom: 0 !important;
 }
 
 #videoBox {
@@ -56,7 +56,8 @@ footer {
 /* Footer/navbar */
 
 #scarecrowContainer {
-  margin-left: 8% !important;
+  padding: 2%;
+  margin-top: -3.5%;
 }
 #lastInLine {
   margin-left: 12% !important;
@@ -75,6 +76,10 @@ footer {
 #footerContainer {
   margin-top: 4%;
   margin-bottom: 4%;
+}
+
+#footerImageContainer {
+  padding: 0;
 }
 
 /* Feature exclusive elements */
@@ -130,7 +135,6 @@ ul {
   margin-left: 3%;
 }
 .pressContainer {
-  /*background-color: rgba(0, 0, 0, 0.5);*/
   margin-left: 8%;
 }
 
@@ -141,11 +145,7 @@ ul {
 }
 .fa-chevron-left {
   margin-left: 10%;
-  /*position: absolute;*/
 }
-/*.fa-chevron-left {
-  position: absolute;
-}*/
 
 
 /* Mobile configurations */
@@ -166,22 +166,20 @@ ul {
   }
   footer {
     position: relative;
-    
   }
 
   #footerContainer {
     display:flex;
     flex-flow:column;
-    /*flex-wrap: nowrap;*/
   }
   #scarecrowContainer {
     order: 2;
+    margin-left: 8%;
   }
   #footerImageContainer {
     margin-left: 3%;
     order: 1;
     display:flex;
-    /*flex-flow:column;*/
     flex-direction:row;
     flex-wrap: nowrap;
   }
@@ -207,8 +205,6 @@ ul {
     margin-top: 20%;
   }
   #imageEnlargedContainer {
-    /*background-color: rgba(0, 0, 0, 0);*/
-    /*display: inherit;*/
     height: 100vh;
   }
   .fa {
@@ -232,13 +228,16 @@ ul {
     padding: 1%;
   }
 
+}
 
-/*
-  #videoBox {
-    height: 40%;
-    width: 90%;
-    margin-left: 5%;
-    opacity: 0.3;
+@media screen and (min-width: 750px) and (max-width: 850px) {
+
+  #footerImageContainer {
+    display:block;
+    float: left;
   }
-
+  #footerContainer {
+    display: block;
+    float: left;
+  }
 }
